# openshell_deepagents_sandbox

./: README.md  policy.yaml  pyproject.toml  sandbox.py
docs/: openshell-cli.md  openshell-deep-agents.md  openshell-policy-tutorial.md  reusing-in-another-project.md
outputs/: get_wmt_history.py  get_wmt_history_robust.py  sum_random_numbers.py  wmt_historical_data.csv  wmt_sample_data.csv
src/: AGENTS.md  agent.py  backend.py  prompts.py  tools.py
