[project]
name = "openshell-deep-agent"
version = "0.1.0"
description = "General-purpose deep agent using OpenShell as the on-prem sandbox provider"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.11",
    "langchain>=1.2.12",
    "langchain-ollama>=1.0.1",
    "langgraph-cli[inmem]>=0.4.18",
    "openshell>=0.0.7",
    "yfinance>=1.2.0",
]

[tool.setuptools]
packages = ["src"]
